--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </ul>
                 </nav>
                 <div class="logo">
-                    <img src="/personal_webpage/image/mypic.jpg" alt="">
+                    <img src="image/mypic.jpg" alt="">
                 </div>
                 <div class="introduce">
                     <h4>Hello, my name is</h4>
@@ -49,7 +49,7 @@
     <main>
     <section class = "about">
         <div class="main">
-            <img src="/personal_webpage//image/kit_logo.png" alt="">
+            <img src="image/kit_logo.png" alt="">
             <div class = "about-text">
                 <h2>About Me</h2>
                 <h5>Software Engineering Student</h5>
@@ -70,19 +70,19 @@
             <div class = "card">
                 <h5> Python </h5>
                 <hr>
-                <img src="/personal_webpage//image/python.png" alt="">
+                <img src="image/python.png" alt="">
                 <p> Python is an interpreted high-level general-purpose programming language. Its design philosophy emphasizes code readability with its use of significant indentation. </p>
             </div>
             <div class = "card">
                 <h5> Java </h5>
                 <hr>
-                <img src="/personal_webpage//image/java.jpg" alt="">
+                <img src="image/java.jpg" alt="">
                 <p>Java is the first programming language and development platform. It reduces costs, shortens development timeframes, drives innovation, and improves application</p>
             </div>
             <div class = "card">
                 <h5> Flutter </h5>
                 <hr>
-                <img src="/personal_webpage//image/flutter.jpg" alt="">
+                <img src="image/flutter.jpg" alt="">
                 <p>Flutter is an open-source UI software development kit created by Google. It is used to develop cross platform applications for Android, iOS, Linux, Mac, Windows, Google Fuchsia, and the web from a single codebase.</p>
             </div>
                 
